Add logic to pass tests

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "marked": "^0.6.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-marked": "^0.3.1",
+    "react-scripts": "2.1.8",
+    "showdown": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
